@@ -6,6 +6,7 @@ import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import jakarta.annotation.PostConstruct;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
@@ -19,53 +20,56 @@ import org.springframework.util.PathMatcher;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
+import java.security.Key;
 import java.util.List;
 
 @Component
 public class JwtValidationFilter implements GlobalFilter, Ordered {
     public static final String BEARER_PREFIX = "Bearer ";
 
+    //TODO: Переделать с HMAC на RS256
     @Value("${jwt.secret}")
     private String jwtSigningKey;
 
-    private static final List<String> EXCLUDED_PATHS = Arrays.asList(
-            "/api/v1/auth/login",
-            "/api/v1/auth/register"
+    //TODO: Придумать как перенести это в конифиги
+    private static final List<String> EXCLUDED_PATHS = List.of(
+            "/api/v1/auth/**"
     );
 
+    private Key signingKey;
     private final PathMatcher pathMatcher = new AntPathMatcher();
+
+    @PostConstruct
+    void init() {
+        this.signingKey = Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtSigningKey));
+    }
 
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
-        String path = exchange.getRequest().getPath().toString();
+        final String path = exchange.getRequest().getPath().toString();
 
         if (EXCLUDED_PATHS.stream().anyMatch(pattern -> pathMatcher.match(pattern, path))) {
             return chain.filter(exchange);
         }
 
         final String header = exchange.getRequest().getHeaders().getFirst(HttpHeaders.AUTHORIZATION);
-        final String jwt;
-
-        if (StringUtils.isEmpty(header) || !StringUtils.startsWith(header, BEARER_PREFIX)){
-            exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-            return exchange.getResponse().setComplete();
+        if (StringUtils.isBlank(header) || !header.startsWith(BEARER_PREFIX)) {
+            return unauthorized(exchange, "Missing token");
         }
 
-        jwt = header.substring(BEARER_PREFIX.length());
+        final String jwt = header.substring(BEARER_PREFIX.length());
 
         if (StringUtils.isNotEmpty(jwt)){
             try{
                Claims claims = Jwts.parserBuilder()
-                        .setSigningKey(Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtSigningKey)))
+                        .setSigningKey(signingKey)
                         .build()
                         .parseClaimsJws(jwt)
                         .getBody();
 
-                if (!claims.containsKey("sub") || !claims.containsKey("role")) {
-                    exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-                    return exchange.getResponse().setComplete();
+                if (claims.getSubject() == null || claims.get("role") == null) {
+                    return unauthorized(exchange, "Invalid claims");
                 }
 
                 exchange = exchange.mutate()
@@ -76,15 +80,19 @@ public class JwtValidationFilter implements GlobalFilter, Ordered {
                         .build();
 
                return chain.filter(exchange);
-            } catch (ExpiredJwtException expiredJwtException){
-                exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-                exchange.getResponse().getHeaders().add("X-Error", "Token expired");
-            }  catch (JwtException | IllegalArgumentException ex) {
-                exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-                exchange.getResponse().getHeaders().add("X-Error", "Invalid token");
+            } catch (ExpiredJwtException ex) {
+                return unauthorized(exchange, "Token expired");
+            } catch (JwtException | IllegalArgumentException ex) {
+                return unauthorized(exchange, "Invalid token");
             }
 
         }
+        return exchange.getResponse().setComplete();
+    }
+
+    private Mono<Void> unauthorized(ServerWebExchange exchange, String error) {
+        exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
+        exchange.getResponse().getHeaders().add("X-Error", error);
         return exchange.getResponse().setComplete();
     }
 
